--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <div class="row text-center">
             <div class="col-sm-8 text-center">
                 <div class="div-center-heading">
-                    <span class="head-t-1 " style="font-size: 60px;margin-left: 30rem;"><i>We help you</i></span><br><br>
-                    <span class="head-support" style="font-size: 60px;margin-left: 30rem;"><i>Tell Your Story</i></span>
+                    <span class="head-t-1 ts-1 "><i>We help you</i></span><br><br>
+                    <span class="head-support ts-2"><i>Tell Your Story</i></span>
                 </div>
             </div>
             <div class="col-sm-4">
